--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ body {
 			game.load.image('ship', 'assets/ship.png');
 			game.load.image('bullet', 'assets/bullets/bullet.png');
 
+			//bgm
+			game.load.audio('music', 'sounds/Starfield (BGM).mp3');
 		}
 
 		function create() {
