--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 			game.load.image('bullet', 'assets/bullets/bullet.png');
 
 			//bgm
-			game.load.audio('music', 'sounds/Starfield (BGM).mp3');
+			game.load.audio('music', 'sounds/Starfield_BGM.mp3');
 		}
 
 		function create() {
