--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ body {
 		var bullets;
 		var fireButton;
 		var bulletTimer = 0;
+		
+		// Game Music
+		var music;
 
 		var ACCLERATION = 600;
 		var DRAG = 400;
