--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ body {
 			// adding sfx
 			laser = game.add.audio('laser');
 			laser.volume = 0.3;
-			rumble = game.add.audio('death');
-			rumble.volume = 1;
+			death = game.add.audio('death');
+			death.volume = 1;
 			enemyLaser = game.add.audio('enemyLaser');
 			enemyLaser.volume = 0.6;
 		}
