--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
 			
 			//sfx
 			game.load.audio('death', 'sounds/death.mp3');
-			game.load.audio('laser', 'sounds/sound_spark_Laser-Like_Synth_Laser_Sweep_Burst_13.mp3');
+			game.load.audio('laser', 'sounds/Laser.mp3');
 			game.load.audio('enemyLaser', 'sounds/Enemy_Laser1.mp3');
 		}
 
