--- a/index.html
+++ b/index.html
@@ -182,12 +182,10 @@ body {
 				if (bullet) {
 					//  And fire it
 					//  Make bullet come out of tip of ship with right angle
-					var bulletOffset = 20 * Math.sin(game.math
-							.degToRad(player.angle));
+					var bulletOffset = 20 * Math.sin(game.math.degToRad(player.angle));
 					bullet.reset(player.x + bulletOffset, player.y);
 					bullet.angle = player.angle;
-					game.physics.arcade.velocityFromAngle(bullet.angle,
-							BULLET_SPEED, bullet.body.velocity);
+					game.physics.arcade.velocityFromAngle(bullet.angle,BULLET_SPEED, bullet.body.velocity);
 					bullet.body.velocity.y += player.body.velocity.y;
 
 					bulletTimer = game.time.now + BULLET_SPACING;
