--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ body {
 		var fireButton;
 		var bulletTimer = 0;
 		
+		//enemy
+		var enemy2;
+		
 		// BGM
 		var music;
 
@@ -53,6 +56,7 @@ body {
 			game.load.image('starfield', 'assets/starfield.png');
 			game.load.image('ship', 'assets/ship.png');
 			game.load.image('bullet', 'assets/bullets/bullet.png');
+			game.load.image('enemy2', '/assets/enemy2.png');
 
 			//bgm
 			game.load.audio('music', 'sounds/Starfield_BGM.mp3');
@@ -86,6 +90,22 @@ body {
 			game.physics.enable(player, Phaser.Physics.ARCADE);
 			player.body.maxVelocity.setTo(MAXSPEED, MAXSPEED);
 			player.body.drag.setTo(DRAG, DRAG);
+			
+			//  The baddies!
+			enemy2 = game.add.group();
+			enemy2.enableBody = true;
+			enemy2.physicsBodyType = Phaser.Physics.ARCADE;
+			enemy2.createMultiple(5, 'enemy2');
+			enemy2.setAll('anchor.x', 0.5);
+			enemy2.setAll('anchor.y', 0.5);
+			enemy2.setAll('scale.x', 0.5);
+			enemy2.setAll('scale.y', 0.5);
+			enemy2.setAll('angle', 180);
+			enemy2.setAll('outOfBoundsKill', true);
+			enemy2.setAll('checkWorldBounds', true);
+			
+			launchEnemy2();
+
 
 			//  And some controls to play the game with
 			cursors = game.input.keyboard.createCursorKeys();
@@ -170,6 +190,15 @@ body {
 		function render() {
 
 		}
+		
+		function launchEnemy2(){
+			var ENEMY_SPEED = 300;
+			var enemy = enemy2.getFirstExists(false);
+			if (enemy){
+				enemy.reset(800, game.rnd.integerInRange(0, game.height));
+				enemy.body.velocity.x = -ENEMY_SPEED;
+				enemy.body.velocity.y = game.rnd.integerInRange(400, -400);
+				enemy.body.drag.y = 100;}
 
 		function fireBullet() {
 			//  To avoid them being allowed to fire too fast we set a time limit
