--- a/index.html
+++ b/index.html
@@ -192,13 +192,21 @@ body {
 		}
 		
 		function launchEnemy2(){
+			var MIN_ENEMY_SPACING = 300;
+			var MAX_ENEMY_SPACING = 3000;
 			var ENEMY_SPEED = 300;
+			
 			var enemy = enemy2.getFirstExists(false);
 			if (enemy){
 				enemy.reset(800, game.rnd.integerInRange(0, game.height));
 				enemy.body.velocity.x = -ENEMY_SPEED;
 				enemy.body.velocity.y = game.rnd.integerInRange(400, -400);
-				enemy.body.drag.y = 100;}
+				enemy.body.drag.y = 100;
+			}
+			
+			//  Send another enemy soon
+			game.time.events.add(game.rnd.integerInRange(MIN_ENEMY_SPACING, MAX_ENEMY_SPACING), launchEnemy2);
+		}
 
 		function fireBullet() {
 			//  To avoid them being allowed to fire too fast we set a time limit
