--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@ body {
   		game.load.image('enemy-blue', 'assets/enemies/enemy3.png');
   		game.load.image('blueEnemyBullet', 'assets/bullets/blue-enemy-bullet.png');
 
-		game.load.audio('dead', 'audio/dead.mp3');
-  		game.load.audio('music', 'audio/Starfield_BGM.mp3');
-  		game.load.audio('lifelost', 'audio/lifelost.wav');
-  		game.load.audio('laser', 'audio/Laser.mp3');
-  		game.load.audio('win', 'audio/win.wav');
-  		game.load.audio('getlife', 'audio/getlife.wav');
-  		game.load.audio('game_over', 'audio/gameover.wav');
-  		game.load.audio('death', 'audio/death.mp3');
-  		game.load.audio('backgroundmusic', 'audio/backgroundmusic.mp3');
+		game.load.audio('dead', 'sounds/dead.mp3');
+  		game.load.audio('lifelost', 'sounds/lifelost.wav');
+  		game.load.audio('laser', 'sounds/Laser.mp3');
+  		game.load.audio('win', 'sounds/win.wav');
+  		game.load.audio('getlife', 'sounds/getlife.wav');
+  		game.load.audio('game_over', 'sounds/gameover.wav');
+  		game.load.audio('death', 'sounds/death.mp3');
+  		game.load.audio('music', 'sounds/Starfield_BGM.mp3');
 
 		}
 		
@@ -219,6 +218,19 @@ body {
    	scoreText.text = 'Score: ' + score;
   		 };
   		scoreText.render();
+			
+			// Add Music
+			music = game.add.audio('music');
+			music.volume = 0.5;
+			music.loop = true;
+			music.play();
+			
+			//	Add Sounds
+			laser = game.add.audio('laser');
+			laser.volume = 0.1;
+			
+			death = game.add.audio('death');
+			death.volume = 1;
 
 		}
 		
@@ -260,7 +272,7 @@ body {
   			}
 
   			//  Fire bullet
-  			if (player.alive && (fireButton.isDown || game.input.activePointer.isDown)) 
+  			if (player.alive && fireButton.isDown) {
   				fireBullet();
   			}
 
