--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
 		var bullets;
 		var fireButton;
 		var bulletTimer = 0;
-		var explosionSo;
+		var death;
 		var greenEnemyLaunchTimer;
 		var greenEnemySpacing = 1000;
 		var blueEnemyLaunched = false;
