--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ body {
 		
 		var score = 0;
     		var scoreText;
+		
 		var ACCLERATION = 600;
 		var DRAG = 400;
 		var MAXSPEED = 400;
@@ -139,7 +140,7 @@ body {
     		blueEnemies.setAll('anchor.y', 0.5);
     		blueEnemies.setAll('scale.x', 0.5);
     		blueEnemies.setAll('scale.y', 0.5);
-    		blueEnemies.setAll('angle', 90)
+    		blueEnemies.setAll('angle', 90);
     		blueEnemies.forEach(function(enemy){
         		enemy.damageAmount = 40;
    		 });
@@ -178,7 +179,7 @@ body {
   		shields = game.add.bitmapText(game.world.width - 250, 10, 'spacefont', 'Shields:' + player.health +'%', 50);
   		shields.render = function () {
     		shields.text = 'Shields: ' + Math.max(player.health, 0) +'%';
-  		};
+  		}
 
   		shields.render();
 
@@ -305,8 +306,7 @@ body {
             }
         }
     }
-
-		}
+}
 		
 		function render() {
 	
@@ -333,6 +333,7 @@ function restart () {
 	
     //  Hide the text
     gameOver.visible = false;
+	
     //  Reset pacing
     greenEnemySpacing = 1000;
     blueEnemyLaunched = false;
@@ -448,7 +449,7 @@ function launchGreenEnemy() {
     		explosion.play('explosion', 30, false, true);
     		bullet.kill();
     		player.damage(bullet.damageAmount);
-    		shields.render()
+    		shields.render();
 		}
 		
 		function addEnemyEmitterTrail(enemy) {
@@ -493,7 +494,7 @@ function launchGreenEnemy() {
 					game.physics.arcade.velocityFromAngle(bullet.angle,BULLET_SPEED, bullet.body.velocity);
 					bullet.body.velocity.y += player.body.velocity.y;
 					bulletTimer = game.time.now + BULLET_SPACING;
-					laser.play()
+					laser.play();
 				}
 			}
 		}
