--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ body {
                     bullet.body.velocity.y += player.body.velocity.y;
                 }
                 bulletTimer = game.time.now + BULLET_SPACING;
-		    laser2.play();
+		    laser.play();
             }
         }
     }
